<resources>
    <string name="app_name">Inventory App</string>

    <string name="action_settings">Settings</string>

    <string name="pirate_oil">Pirate Beard Oil</string>

    <string name="oil_price">$25.00</string>

    <string name="in_stock">In Stock</string>

    <string name="current_quantity">1</string>

    <string name="empty_view_text">Add items to your inventory!</string>

    <string name="quantity_edit">0</string>

    <string name="product_name">Product Name</string>

    <string name="product_price">Product Price</string>

    <string name="product_quantity">Product Quantity</string>

    <string name="detail_email_text">Supplier Email</string>

    <string name="detail_image_button_text">Add Product Image</string>

    <string name="action_save">Save Item</string>

    <string name="menu_order_item">Order Item</string>

    <string name="detail_phone_number">Supplier Phone Number</string>

    <string name="order_button_text">Order</string>

    <string name="sale_button_text">Sold</string>

    <string name="delete_button_text">Delete</string>

    <string name="editor_activity_title_new_item">Add new item</string>

    <string name="editor_activity_title_edit_item">Edit item</string>

    <string name="unsaved_changes_dialog_msg">There are unsaved changes. Do you wish to continue?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="order_message">You can please this order by phone or email.</string>

    <string name="phone">Phone</string>

    <string name="email">E-mail</string>

    <string name="delete_message">Are you sure you want to proceed with the deletion?</string>

    <string name="delete">Accept</string>

    <string name="cancel">Cancel</string>

    <string name="new_product">Add new item</string>

    <string name="supplier_name_title">Supplier Name</string>

    <string name="supplier_name_hint">Beard Hero</string>

    <string name="menu_delete_item">Delete item</string>

    <string name="menu_delete_all_data">Delete all data</string>

    <string name="empty_list_hint">Start adding inventory!</string>

    <string name="sale_button">Sale</string>




</resources>
