<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_name_text"
            style="@style/detail_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/product_name"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Add Product Name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/detail_price_text"
            style="@style/detail_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Add Product Price"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <TextView
            android:id="@+id/detail_product_quantity"
            style="@style/detail_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/subtract"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:elevation="24dp"
                android:text="-"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:visibility="visible" />


            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:text="@string/quantity_edit" />

            <Button
                android:id="@+id/add_product"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:elevation="24dp"
                android:text="+"
                android:textAppearance="@style/TextAppearance.AppCompat" />


        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name_title"
            style="@style/detail_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name_title" />

        <EditText
            android:id="@+id/supplier_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/supplier_name_hint"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/detail_email"
            style="@style/detail_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_email_text" />

        <EditText
            android:id="@+id/supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Add Supplier Email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/detail_phone"
            style="@style/detail_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_phone_number" />

        <EditText
            android:id="@+id/supplier_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Add Supplier Phone"
            android:imeOptions="actionDone"
            android:inputType="phone" />

        <TextView
            android:id="@+id/detail_image_button_text"
            style="@style/detail_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_image_button_text" />

        <Button
            android:id="@+id/image_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="24dp"
            android:paddingBottom="@dimen/text_padding"
            android:text="Add Image"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp" />


    </LinearLayout>
</ScrollView>