<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/oil_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/pirate" />

        <TextView
            android:id="@+id/oil_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oil_image"
            android:padding="@dimen/text_padding"
            android:text="@string/pirate_oil"
            android:textAllCaps="true"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/oil_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/oil_name"
            android:paddingBottom="@dimen/text_padding"
            android:paddingLeft="@dimen/text_padding"
            android:text="@string/oil_price"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/oil_in_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/oil_price"
            android:paddingLeft="@dimen/text_padding"
            android:text="@string/in_stock"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/oil_price"
            android:layout_toRightOf="@id/oil_in_stock"
            android:paddingLeft="@dimen/text_padding"
            android:text="@string/current_quantity"
            android:textSize="16sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/sale"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_vertical"
            android:paddingEnd="@dimen/text_padding"
            android:src="@drawable/sale"
             />
    </RelativeLayout>

</android.support.v7.widget.CardView>
